# rematch

./: .gitignore  .travis.yml  Main.hs  README.md  RELEASENOTES.md  rematch.cabal
Control/: Rematch.hs
Control/Rematch/: Formatting.hs  QuickCheck.hs  Run.hs  Specs.hs
bytestring-rematch/: Main.hs  bytestring-rematch.cabal
bytestring-rematch/Control/Rematch/ByteString/: Lazy.hs  Specs.hs  Strict.hs
bytestring-rematch/script/: test
core/: Main.hs  rematch.cabal
core/Control/: Rematch.hs
core/Control/Rematch/: Data.hs  QuickCheck.hs  Specs.hs
hunit-rematch/: Main.hs  hunit-rematch.cabal
hunit-rematch/Test/Rematch/: HUnit.hs
hunit-rematch/Test/Rematch/Specs/: HUnit.hs
hunit-rematch/script/: test
quickcheck-rematch/: Main.hs  quickcheck-rematch.cabal
quickcheck-rematch/Test/Rematch/: QuickCheck.hs  QuickCheckSpecs.hs
quickcheck-rematch/script/: test
script/: ci  clean-haddock  lint  sdist  test  test-package-config
tasty-hunit-rematch/: LICENSE  Main.hs  tasty-hunit-rematch.cabal
tasty-hunit-rematch/Test/Rematch/: TastyHUnit.hs
tasty-hunit-rematch/Test/Rematch/Specs/: TastyHUnit.hs
text-rematch/: Main.hs  rematch-text.cabal
text-rematch/Control/Rematch/Text/: Lazy.hs  Specs.hs  Strict.hs
text-rematch/script/: test
unordered-containers-rematch/: Main.hs  unordered-containers-rematch.cabal
unordered-containers-rematch/Control/Rematch/: HashSet.hs
unordered-containers-rematch/Control/Rematch/HashMap/: Lazy.hs  Specs.hs  Strict.hs
unordered-containers-rematch/script/: test
(+1 files in other folders)
