name:                tasty-hunit-rematch
version:             0.1.0.1
synopsis:            Tasty-HUnit support for rematch
-- description:         
homepage:            http://github.com/tcrayford/rematch
license:             MIT
license-file:        LICENSE
author:              Tom Crayford
maintainer:          tcrayford@googlemail.com
-- copyright:           
category:            Testing
build-type:          Simple
cabal-version:       >=1.8

library
  -- exposed-modules:     
  -- other-modules:       
  build-depends:       base >= 4.5.0 && < 5, rematch >= 0.2, tasty-hunit >= 0.9
  exposed-modules:     Test.Rematch.TastyHUnit
test-suite tests
  build-depends:       base >= 4.5.0 && < 5, hspec >= 1.4, tasty-hunit >= 0.9, rematch >= 0.2
  type: exitcode-stdio-1.0
  main-is: Main.hs
